--- a/app/src/main/res/layout/bar_offline_activity_try.xml
+++ b/app/src/main/res/layout/bar_offline_activity_try.xml
@@ -17,7 +17,7 @@
             android:layout_height="?attr/actionBarSize"
             android:id="@+id/toolbar"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopUpOverlay" />
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
     </com.google.android.material.appbar.AppBarLayout>
 
     <include layout="@layout/content_offline_activity_try" />
