Started to build user authentication

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,8 @@
     <color name="colorPrimaryDark">#3e5560</color>
     <color name="colorAccent">#FF4081</color>
     <color name="red">#fc1606</color>
+    <color name="cyan">cyan</color>
+    <color name="white">white</color>
+    <color name="bluetext">bluetext</color>
+    <color name="blue">blue</color>
 </resources>
