Modifications to code for user authentication

--- a/app/src/main/res/layout/activity_user_register.xml
+++ b/app/src/main/res/layout/activity_user_register.xml
@@ -103,7 +103,7 @@
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/userPasswrodLayout"
+            android:id="@+id/userPasswordLayout"
             app:endIconMode="password_toggle">
 
             <com.google.android.material.textfield.TextInputEditText
