--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,9 @@
     <color name="colorPrimaryDark">#3e5560</color>
     <color name="colorAccent">#FF4081</color>
     <color name="red">#fc1606</color>
-    <color name="cyan">cyan</color>
-    <color name="white">white</color>
-    <color name="bluetext">bluetext</color>
-    <color name="blue">blue</color>
+    <color name="cyan">#00FFFF</color>
+    <color name="white">#FFFFFF</color>
+    <color name="bluetext">#00ffFF</color>
+    <color name="blue">#0000FF</color>
+    <color name="black">#000000</color>
 </resources>
