Create playlist and functionalities for it

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="red">#fc1606</color>
     <color name="cyan">#00FFFF</color>
     <color name="white">#FFFFFF</color>
-    <color name="bluetext">#00ffFF</color>
+    <color name="MediumAquamarine">#66CDAA</color>
     <color name="blue">#0000FF</color>
     <color name="black">#000000</color>
 </resources>
