--- a/app/src/main/res/layout/swipe_list_item_track.xml
+++ b/app/src/main/res/layout/swipe_list_item_track.xml
@@ -31,7 +31,7 @@
             <ImageButton
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:id="@+id/fbupload"
+                android:id="@+id/fbUpload"
                 android:src="@drawable/ic_share_lime_300_24dp"
                 android:layout_weight="1" />
                 <ImageButton
