--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -49,7 +49,7 @@
             app:selectedAction1="@drawable/shuffle_selected"
             app:selectedAction2="@drawable/like_selected"
             app:selectedAction3="@drawable/replay_selected"
-            app:uselectedAction1="@drawable/shuffle_unselected"
+            app:unselectedAction1="@drawable/shuffle_unselected"
             app:unselectedAction2="@drawable/like_unselected"
             app:unselectedAction3="@drawable/replay_unselected" />
 
@@ -57,7 +57,7 @@
             android:layout_width="33dp"
             android:layout_height="33dp"
             android:layout_centerVertical="true"
-            android:id="@id/interactivePlayerView"
+            android:id="@id/ipv"
             android:layout_marginLeft="10dp"
             android:background="@android:drawable/ic_media_next" />
 
@@ -66,7 +66,7 @@
             android:layout_height="33dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@id/interactivePlayerView"
+            android:layout_toRightOf="@id/ipv"
             android:background="@android:drawable/ic_media_previous" />
 
     </RelativeLayout>
