--- a/app/src/main/res/layout/activity_pedometer.xml
+++ b/app/src/main/res/layout/activity_pedometer.xml
@@ -27,6 +27,7 @@
         android:id="@+id/fab"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:srcCompat="@android:drawable/ic_dialog_email" />
+        android:src="@android:drawable/ic_dialog_email"
+        android:contentDescription="FloatingActionButton" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
