--- a/app/src/main/res/layout/content_pedometer.xml
+++ b/app/src/main/res/layout/content_pedometer.xml
@@ -35,6 +35,15 @@
             android:text="Steps"
             android:textSize="25sp" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:id="@+id/date"
+            android:gravity="center"
+            android:textColor="@android:color/background_light"
+            android:text="Date"
+            android:textSize="25sp" />
+
         <ToggleButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
