--- a/app/src/main/res/layout/content_login_firebase.xml
+++ b/app/src/main/res/layout/content_login_firebase.xml
@@ -75,7 +75,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/loginGoogleButton"
-            android:gravity="center"
+            android:layout_gravity="center"
             android:background="@drawable/common_google_signin_btn_text_light_normal"
             android:text="Sign in" />
 
