Modificate drawable layout files and create new files

--- a/app/src/main/res/layout/content_login_firebase.xml
+++ b/app/src/main/res/layout/content_login_firebase.xml
@@ -47,7 +47,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/password"
-                android:backgroundTint="@android:color/background_light"
+                android:background="@android:color/background_light"
                 android:hint="Password"
                 android:inputType="textPassword" />
 
