--- a/app/src/main/res/layout/list_item_fbpedo.xml
+++ b/app/src/main/res/layout/list_item_fbpedo.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp">
@@ -8,14 +9,15 @@
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:weightSum="4"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        tools:ignore="MissingConstraints">
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:id="@+id/fbDistance"
-            android:text="200cm"
+            android:text="0cm"
             android:textColor="@android:color/black"
             android:textSize="25sp" />
 
@@ -24,7 +26,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:id="@+id/fbSteps"
-            android:text="10 steps"
+            android:text="0 steps"
             android:textColor="@android:color/black"
             android:textSize="25sp" />
 
@@ -33,7 +35,7 @@
             android:layout_height="match_parent"
             android:layout_weight="2"
             android:id="@+id/fbDate"
-            android:text="19/05/21"
+            android:text="dd/mm/yyyy"
             android:textColor="@android:color/black"
             android:textSize="25sp" />
     </LinearLayout>
