--- a/app/src/main/res/layout/swipe_list_item_track.xml
+++ b/app/src/main/res/layout/swipe_list_item_track.xml
@@ -22,18 +22,18 @@
             android:id="@+id/bottom_wrapper"
             android:weightSum="3">
 
-            <ImageButton
-                android:id="@+id/fav"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:src="@mipmap/ic_launcher"/>
+                <ImageButton
+                    android:id="@+id/fav"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:src="@mipmap/ic_launcher"/>
             <ImageButton
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:id="@+id/fbUpload"
-                android:src="@drawable/ic_share_lime_300_24dp"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:src="@drawable/ic_share_lime_300_24dp" />
                 <ImageButton
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
