--- a/app/src/main/res/layout/content_pedometer.xml
+++ b/app/src/main/res/layout/content_pedometer.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/image"
+    android:background="@drawable/images"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".Pedometer"
     tools:showIn="@layout/activity_pedometer">
@@ -33,15 +33,6 @@
             android:gravity="center"
             android:textColor="@android:color/background_light"
             android:text="Steps"
-            android:textSize="25sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:id="@+id/date"
-            android:gravity="center"
-            android:textColor="@android:color/background_light"
-            android:text="Date"
             android:textSize="25sp" />
 
         <ToggleButton
