--- a/app/src/main/res/layout/list_item_fbpedo.xml
+++ b/app/src/main/res/layout/list_item_fbpedo.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="5dp">
 
     <LinearLayout
@@ -10,7 +11,10 @@
         android:layout_height="35dp"
         android:weightSum="4"
         android:orientation="horizontal"
-        tools:ignore="MissingConstraints">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
 
         <TextView
             android:layout_width="0dp"
